--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ hr{
 .copyright{
     font-family: 'Montserrat', sans-serif;
     margin: 30px auto 30px;
-    font-size: 16px;
+    font-size: 0.625rem;
     color:white
 }
 
